--- a/Public/Css/room.css
+++ b/Public/Css/room.css
@@ -572,6 +572,13 @@ body {
     display: none;
 }
 
+.sender-name {
+    font-weight: bold;
+    font-size: 0.8em;
+    color: #555;
+    margin-bottom: 5px;
+}
+
 /* Responsive design */
 @media (max-width: 1200px) {
     .chat-container {
